add: new page SelectedOrdersTool

--- a/client/src/component/common/AdminMain/FilterSection/FilterSection.module.css
+++ b/client/src/component/common/AdminMain/FilterSection/FilterSection.module.css
@@ -1,16 +1,31 @@
 .filterBar {
+  margin-bottom: 4rem;
+  display: flex;
+  flex-wrap: nowrap;
+}
+
+.filterBar__select,
+.filterBar__input,
+.filterBar__button {
+  padding: 0.9rem 1.2rem;
+  background-color: white;
+  font-size: 1.6rem;
+  color: #636363;
+  font-weight: 300;
+  border: none;
+  border-radius: 1.2rem;
+  margin-right: 2rem;
+  outline: none;
 }
 
 .filterBar__select {
-  padding: 0.5rem 1rem;
-  background-color: #f3f3f3;
-  font-size: 1.6rem;
-  font-weight: 300;
-  border: none;
+  width: 22rem;
 }
 
 .filterBar__input {
+  width: 42rem;
 }
 
 .filterBar__button {
+  padding: 0.9rem 2.7rem;
 }
