--- a/client/src/component/common/AdminMain/AdminMain.module.css
+++ b/client/src/component/common/AdminMain/AdminMain.module.css
@@ -2,3 +2,13 @@
   margin-bottom: 3rem;
   font-weight: 400;
 }
+
+.content {
+  display: flex;
+  flex-direction: column;
+  transition: margin-right 0.3s ease;
+}
+
+.content_shifted {
+  margin-right: 34rem;
+}
