--- a/client/src/features/admin/components/AdminNav/AdminNav.module.css
+++ b/client/src/features/admin/components/AdminNav/AdminNav.module.css
@@ -7,10 +7,21 @@
   justify-content: space-between;
   align-items: center;
   padding: 2rem 5rem;
+  z-index: 100;
 }
 
 .nav__title {
   font-size: 2rem;
   font-weight: 300;
   color: black;
+}
+
+@media (max-width: 576px) {
+  .nav__title {
+    font-size: 2rem;
+    font-weight: 400;
+  }
+  .nav {
+    padding: 2.3rem 5rem;
+  }
 }
