--- a/client/src/features/admin/forms/EditForm/EditForm.module.css
+++ b/client/src/features/admin/forms/EditForm/EditForm.module.css
@@ -9,12 +9,15 @@
   padding: 4rem 3rem;
   z-index: 100;
   transform: translateX(100%);
-  transition: transform 1s ease;
-  overflow-y: auto;
+  transition: transform 0.5s ease-in-out, opacity 0.5s ease-in-out;
+  opacity: 0;
+  pointer-events: none;
 }
 
 .editForm_visible {
   transform: translateX(0);
+  opacity: 1;
+  pointer-events: auto;
 }
 
 .editForm__header {
