--- a/client/src/features/client/components/Header/Nav/Nav.module.css
+++ b/client/src/features/client/components/Header/Nav/Nav.module.css
@@ -61,3 +61,14 @@
     display: none;
   }
 }
+
+@media (max-width: 425px) {
+  .nav {
+    width: calc(100vw - 6rem);
+    left: 3rem;
+    top: 3rem;
+  }
+  .logoText {
+    font-size: 3rem;
+  }
+}
