--- a/client/src/features/client/components/Main/Main.module.css
+++ b/client/src/features/client/components/Main/Main.module.css
@@ -1,3 +1,24 @@
 .content {
   padding: 0 5rem 0 5rem;
 }
+
+@media (max-width: 425px) {
+  .content {
+    padding: 0rem 3rem 0 3rem;
+  }
+
+  h2 {
+    font-size: 2.8rem;
+    margin-bottom: 4rem;
+  }
+  h3 {
+    font-size: 2.6rem;
+  }
+  h4 {
+    font-size: 2.65rem;
+  }
+
+  p {
+    font-size: 2.2rem;
+  }
+}
