--- a/client/src/features/client/components/Main/ServicesSection/ServicesCard/ServicesCard.module.css
+++ b/client/src/features/client/components/Main/ServicesSection/ServicesCard/ServicesCard.module.css
@@ -12,10 +12,10 @@
 
 .icon {
   display: flex;
-  margin: 0 auto;
+  justify-content: center;
+  font-size: 4.5rem;
+  color: rgb(0, 0, 0);
   margin-bottom: 2rem;
-  width: 7rem;
-  height: 7rem;
 }
 
 .title {
@@ -58,9 +58,16 @@
 
 @media (max-width: 425px) {
   .card {
-    width: 100%;
+    width: 82%;
+    padding: 5rem 2.4rem;
+  }
+  .icon {
+    font-size: 6rem;
+  }
+  .list li {
+    font-size: 2.15rem;
   }
   .card:not(:last-child) {
-    margin-bottom: 3rem;
+    margin-bottom: 2rem;
   }
 }
