--- a/client/src/features/client/components/Main/WhyChooseUsSection/WhyChooseUsCard/WhyChooseUsCard.module.css
+++ b/client/src/features/client/components/Main/WhyChooseUsSection/WhyChooseUsCard/WhyChooseUsCard.module.css
@@ -18,6 +18,7 @@
   font-size: 2rem;
   font-weight: 300;
   max-width: 24rem;
+  color: black;
 }
 
 @media (max-width: 992px) {
@@ -48,9 +49,13 @@
 
 @media (max-width: 425px) {
   .card {
-    width: 100%;
+    width: 90%;
+    padding: 2.4rem 3rem;
   }
   .card:not(:last-child) {
-    margin-bottom: 3rem;
+    margin-bottom: 2rem;
+  }
+  .subtitle {
+    font-size: 2.2rem;
   }
 }
