--- a/client/src/features/client/forms/ApplicationForm/Input/Input.module.css
+++ b/client/src/features/client/forms/ApplicationForm/Input/Input.module.css
@@ -51,3 +51,24 @@
 .inputGroup select:active {
   transform: scale(1.02);
 }
+
+@media (max-width: 425px) {
+  .inputGroup input,
+  .inputGroup select {
+    font-size: 2rem;
+  }
+
+  .selectGroup::after {
+    font-size: 2.6rem;
+    top: 55%;
+    right: 2rem;
+  }
+}
+
+@media (max-width: 320px) {
+  .selectGroup::after {
+    font-size: 2rem;
+    top: 55%;
+    right: 2rem;
+  }
+}
