--- a/client/src/features/auth/forms/LoginForm/LoginForm.module.css
+++ b/client/src/features/auth/forms/LoginForm/LoginForm.module.css
@@ -40,6 +40,7 @@
   font-size: 1.6rem;
   transition: transform 0.2s ease;
   cursor: pointer;
+  background-color: white;
 }
 
 .form__button:hover {
